--- a/ctdn.html
+++ b/ctdn.html
@@ -21,26 +21,32 @@
      <button id="pbtn">Pause</button>
     <p id="demo"></p>
     <script>
-      var x;
+      var x, hours, minutes, seconds;
       document.getElementById('mybtn').addEventListener('click', function(){
         // logic goes here
-       var hrs = document.getElementById('hrs').value;
+        var hrs = document.getElementById('hrs').value;
         var mins = document.getElementById('mins').value;
         var sec = document.getElementById('sec').value;
       //  var date=document.getElementById('date').value;
-        var end_date = new Date(2018,2,23,hrs,mins,sec,0);
+        var end_date = new Date(2018,2,27,hrs,mins,sec,0);
 
           x = setInterval(function(){
-          var start_date = new Date().getTime();
-          var difference = end_date.getTime() - start_date;//.getTime();
-          if(end_date<start_date){
+          var start_date = new Date();
+          var difference = end_date.getTime() - start_date.getTime();
+          var miliDiff = start_date.getMilliseconds()- end_date.getMilliseconds();
+          //var miliDiff = start_date.getTime()- end_date.getTime();
+          console.log(miliDiff);
+          console.log(difference);
+          console.log(end_date);
+          console.log(start_date);
+          if(miliDiff<0){
               document.getElementById("demo").innerHTML = "EXPIRED";
               clearInterval(x);
           }
 
-          var hours = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-          var minutes = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
-          var seconds = Math.floor((difference % (1000 * 60)) / 1000);
+          hours = Math.floor((difference % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+          minutes = Math.floor((difference % (1000 * 60 * 60)) / (1000 * 60));
+          seconds = Math.floor((difference % (1000 * 60)) / 1000);
 
           document.getElementById("demo").innerHTML =
           hours + "h "+ minutes + "m " + seconds + "s ";
@@ -59,17 +65,10 @@
       });
 
       //pause button coding
-    //  <button onclick="clearInterval(myVar)">Stop time</button>
+
      document.getElementById('pbtn').addEventListener('click', function(){
-
-  var myVar = setInterval(myTimer ,1000);
-  function myTimer() {
-      var d = new Date();
-        var end_date = new Date(2018,2,23,hours,minutes,seconds,0).getTime();
-      document.getElementById("demo").innerHTML = d.toLocaleTimeString();
-  }
-
-})
+       clearInterval(x);
+     });
     </script>
   </body>
 </html>
